unpackaged/main/default/objects/Bonus_Agreement__c/Bonus_Agreement__c.object-meta.xml
<CustomObject>
    <description>Template(s) to store Bonus Coupon Agreements which can be assigned to an Account and customized with approval</description>
    <label>Bonus Agreement</label>
    <nameField>
        <displayFormat>BA-{0000000000}</displayFormat>
        <label>Bonus Agreement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bonus Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>