unpackaged/main/default/objects/Bonus_Agreement__c/fields/Buy_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Buy_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>