unpackaged/main/default/objects/Bonus_Agreement__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <formula>IF(ISBLANK( Label__c ),  Brand__r.Name , Label__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product</label>
    <type>Text</type>
</CustomField>