unpackaged/main/default/objects/Bonus_Agreement__c/fields/Trade_Channel__c.field-meta.xml
<CustomField>
    <fullName>Trade_Channel__c</fullName>
    <label>Trade Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BAR</fullName>
            </value>
            <value>
                <fullName>HOTEL</fullName>
            </value>
            <value>
                <fullName>HI VOLUME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>