unpackaged/main/default/objects/Bonus_Agreement__c/validationRules/Bonus_Offer_Product_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Bonus_Offer_Product_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Brand__c)),NOT(ISBLANK(Label__c)))</errorConditionFormula>
    <errorDisplayField>Brand__c</errorDisplayField>
    <errorMessage>Please only select Brand OR Label but not both</errorMessage>
</ValidationRule>