unpackaged/main/default/objects/Bonus_Agreement__c/validationRules/Bonus_Offer_Product_Validation_Blanks.validationRule-meta.xml
<ValidationRule>
    <fullName>Bonus_Offer_Product_Validation_Blanks</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISBLANK(Brand__c),ISBLANK(Label__c))</errorConditionFormula>
    <errorDisplayField>Brand__c</errorDisplayField>
    <errorMessage>Please only select Brand OR Label but not both</errorMessage>
</ValidationRule>