unpackaged/main/default/objects/Bonus_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>Brand__c</columns>
    <columns>Label__c</columns>
    <columns>Bonus__c</columns>
    <columns>Maximum_Bonus__c</columns>
    <columns>Buy_Quantity__c</columns>
    <columns>Status__c</columns>
    <columns>Buy_Start_Date__c</columns>
    <columns>Buy_End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>